--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.12.0",
+    "react-calendar": "^2.19.2",
     "react-dom": "^16.12.0",
     "react-map-gl": "^5.1.5",
     "react-redux": "^7.1.3",
