--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.1.2",
-    "firebase": "^7.6.1",
-    "react": "^16.12.0",
+    "firebase": "^7.14.1",
+    "react": "^16.13.1",
     "react-calendar": "^2.19.2",
-    "react-dom": "^16.12.0",
-    "react-map-gl": "^5.1.5",
-    "react-redux": "^7.1.3",
+    "react-dom": "^16.13.1",
+    "react-map-gl": "^5.2.5",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.3.0",
     "react-slick": "^0.25.2",
-    "redux": "^4.0.4",
+    "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
